// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with other props 1`] = `
<div
  className="g-ytsubscribe"
  data-channel="channel"
  data-count="hidden"
  data-layout="full"
  data-theme="dark"
/>
`;

exports[`renders correctly with required props 1`] = `
<div
  className="g-ytsubscribe"
  data-channel="channel"
  data-count="show"
  data-layout="none"
  data-theme="none"
/>
`;
